force-app/main/default/objects/Teacher__c/fields/B_Tech__c.field-meta.xml
<CustomField>
    <fullName>B_Tech__c</fullName>
    <label>B.Tech</label>
    <length>20</length>
    <type>Text</type>
</CustomField>