force-app/main/default/objects/Teacher__c/fields/Teching_subjects__c.field-meta.xml
<CustomField>
    <fullName>Teching_subjects__c</fullName>
    <label>Teching subjects</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>Maths</fullName>
            </value>
            <value>
                <fullName>Physics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>