force-app/main/default/objects/Teacher__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>B_Tech__c</columns>
    <columns>email__c</columns>
    <columns>phone_number__c</columns>
    <columns>Teching_subjects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>